--- a/graphcast_demo.ipynb
+++ b/graphcast_demo.ipynb
@@ -12,7 +12,7 @@
         "\n",
         "The model weights, normalization statistics, and example inputs are available on [Google Cloud Bucket](https://console.cloud.google.com/storage/browser/dm_graphcast).\n",
         "\n",
-        "A Colab runtime with TPU/GPU acceleration will substantially speed up generating predictions and computing the loss/gradients. If you're using a CPU-only runtime, you can switch using the menu \"Runtime \u003e Change runtime type\"."
+        "A Colab runtime with TPU/GPU acceleration will substantially speed up generating predictions and computing the loss/gradients. If you're using a CPU-only runtime, you can switch using the menu \"Runtime > Change runtime type\"."
       ]
     },
     {
@@ -21,9 +21,9 @@
         "id": "IIWlNRupdI2i"
       },
       "source": [
-        "\u003e \u003cp\u003e\u003csmall\u003e\u003csmall\u003eCopyright 2023 DeepMind Technologies Limited.\u003c/small\u003e\u003c/p\u003e\n",
-        "\u003e \u003cp\u003e\u003csmall\u003e\u003csmall\u003eLicensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at \u003ca href=\"http://www.apache.org/licenses/LICENSE-2.0\"\u003ehttp://www.apache.org/licenses/LICENSE-2.0\u003c/a\u003e.\u003c/small\u003e\u003c/small\u003e\u003c/p\u003e\n",
-        "\u003e \u003cp\u003e\u003csmall\u003e\u003csmall\u003eUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\u003c/small\u003e\u003c/small\u003e\u003c/p\u003e"
+        "> <p><small><small>Copyright 2023 DeepMind Technologies Limited.</small></p>\n",
+        "> <p><small><small>Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at <a href=\"http://www.apache.org/licenses/LICENSE-2.0\">http://www.apache.org/licenses/LICENSE-2.0</a>.</small></small></p>\n",
+        "> <p><small><small>Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</small></small></p>"
       ]
     },
     {
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "cellView": "form",
         "id": "Z_j8ej4Pyg1L"
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "cellView": "form",
         "id": "4wagX1TL_f15"
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "cellView": "form",
         "id": "5JUymx84dI2m"
@@ -141,11 +141,11 @@
         "    variable: str,\n",
         "    level: Optional[int] = None,\n",
         "    max_steps: Optional[int] = None\n",
-        "    ) -\u003e xarray.Dataset:\n",
+        "    ) -> xarray.Dataset:\n",
         "  data = data[variable]\n",
         "  if \"batch\" in data.dims:\n",
         "    data = data.isel(batch=0)\n",
-        "  if max_steps is not None and \"time\" in data.sizes and max_steps \u003c data.sizes[\"time\"]:\n",
+        "  if max_steps is not None and \"time\" in data.sizes and max_steps < data.sizes[\"time\"]:\n",
         "    data = data.isel(time=range(0, max_steps))\n",
         "  if level is not None and \"level\" in data.coords:\n",
         "    data = data.sel(level=level)\n",
@@ -155,7 +155,7 @@
         "    data: xarray.Dataset,\n",
         "    center: Optional[float] = None,\n",
         "    robust: bool = False,\n",
-        "    ) -\u003e tuple[xarray.Dataset, matplotlib.colors.Normalize, str]:\n",
+        "    ) -> tuple[xarray.Dataset, matplotlib.colors.Normalize, str]:\n",
         "  vmin = np.nanpercentile(data, (2 if robust else 0))\n",
         "  vmax = np.nanpercentile(data, (98 if robust else 100))\n",
         "  if center is not None:\n",
@@ -171,7 +171,7 @@
         "    plot_size: float = 5,\n",
         "    robust: bool = False,\n",
         "    cols: int = 4\n",
-        "    ) -\u003e tuple[xarray.Dataset, matplotlib.colors.Normalize, str]:\n",
+        "    ) -> tuple[xarray.Dataset, matplotlib.colors.Normalize, str]:\n",
         "\n",
         "  first_data = next(iter(data.values()))[0]\n",
         "  max_steps = first_data.sizes.get(\"time\", 1)\n",
@@ -256,12 +256,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "cellView": "form",
         "id": "KGaJ6V9MdI2n"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "2b19e75a8340437abb1dcf31485b3e4f",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "VBox(children=(Tab(children=(VBox(children=(IntSlider(value=4, description='Mesh size:', max=6, min=4), IntSli…"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# @title Choose the model\n",
         "\n",
@@ -434,7 +450,7 @@
         "with gcs_bucket.blob(f\"dataset/{dataset_file.value}\").open(\"rb\") as f:\n",
         "  example_batch = xarray.load_dataset(f).compute()\n",
         "\n",
-        "assert example_batch.dims[\"time\"] \u003e= 3  # 2 for input, \u003e=1 for targets\n",
+        "assert example_batch.dims[\"time\"] >= 3  # 2 for input, >=1 for targets\n",
         "\n",
         "print(\", \".join([f\"{k}: {v}\" for k, v in parse_file_parts(dataset_file.value.removesuffix(\".nc\")).items()]))\n",
         "\n",
@@ -845,7 +861,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.14"
     }
   },
   "nbformat": 4,
