--- a/graphcast_demo.ipynb
+++ b/graphcast_demo.ipynb
@@ -30196,6 +30196,17 @@
             "Eval Targets:   {'batch': 1, 'time': 1, 'lat': 721, 'lon': 1440, 'level': 37}\n",
             "Eval Forcings:  {'batch': 1, 'time': 1, 'lat': 721, 'lon': 1440}\n"
           ]
+        },
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+            "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+            "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+            "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+          ]
         }
       ],
       "source": [
